--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,13 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true
+    "incremental": true,
+    "paths": {
+      "@components/*": ["src/components/*"],
+      "@services/*": ["src/services/*"],
+      "@database/*": ["src/database/*"],
+      "@constant/*": ["src/constant/*"],
+      "@repositories/*": ["src/repositories/*"],
+    },
   }
 }
